# g-err

./: AUDIT.md  Cargo.toml  Makefile  README.md
.github/workflows/: audit.yml  ci.yml  cron-audit.yml  msrv.yml
benches/: bench.rs
benches/benches/: constructor.rs  constructor_bench.rs  result.rs  result_bench.rs
src/: gerr.rs  gerr_box.rs  gerr_source.rs  gerr_view.rs  iterator.rs  lib.rs  macros.rs  query.rs  report.rs  result_ext.rs  serde.rs  types.rs
src/report/: json_data.rs  json_report.rs  markdown_report.rs  pretty_report.rs  trace_report.rs
tests/: builder_test.rs  code_test.rs  constructor_test.rs  conversion_test.rs  error_display_debug_test.rs  error_display_debug_test_data.rs  iterator_test.rs  json_report_test.rs  json_report_test_data.rs  json_serde_test.rs  json_serde_test_data.rs  macro_test.rs  prefix_test.rs  query_test.rs  report_test.rs  report_test_data.rs  result_test.rs  result_test_data.rs  setup_test.rs  size_test.rs  sources_test.rs  tags_test.rs  test.rs
