[package]
name = "g-err"
version = "0.0.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Error type"
license = "MIT"
repository = "https://github.com/mfirhas/g-err"
documentation = "https://docs.rs/g-err"
keywords = ["error", "error-handling", "macro"]
categories = ["rust-patterns", "data-structures"]
exclude = [
  "**/*_test.rs",
  "tests/**",
  "benches/**",
  "examples/**",
  ".github/**",
  ".gitignore",
  "Makefile",
  "AGENTS.md",
]

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "test"
path = "tests/test.rs"

[features]
default = ["std"]
std = []
json = ["dep:serde_json"]
serde = ["dep:serde"]
backtrace = ["std"]

[dependencies]
# uuid = { version = "1", default-features = false, features = ["v4"], optional = true }
serde = { version = "1", default-features = false , features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
