[package]
name = "g-err"
version = "0.1.0"
edition = "2024"
authors = ["Muhammad Fathir Irhas <fathir.irhas@gmail.com>"]
description = "Structured error type"
license = "MIT"
repository = "https://github.com/mfirhas/g-err"
documentation = "https://docs.rs/g-err"
keywords = ["error", "error-handling", "macro"]
categories = ["rust-patterns", "data-structures"]
rust-version = "1.88.0"
exclude = [
  "**/*_test.rs",
  "tests/**",
  "benches/**",
  "examples/**",
  ".github/**",
  ".gitignore",
  "Makefile",
  "AUDIT.md",
  "AGENTS.md",
]

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
harness = false

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_json"]
backtrace = ["std"]

[dependencies]
serde = { version = "1", default-features = false , features = ["derive"], optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", default-features = false, features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

